[package]
name = "hyperpumpkin"
version.workspace = true
edition.workspace = true

[dependencies]
pumpkin-protocol.workspace = true
pumpkin-registry.workspace = true
pumpkin-world.workspace = true
pumpkin-core.workspace = true
pumpkin-macros.workspace = true
pumpkin-config.workspace = true

flecs_ecs.workspace = true
bytes.workspace = true
derive_more.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-chrome.workspace = true
tokio.workspace = true
sharded-slab.workspace = true
ctrlc.workspace = true
crossbeam.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rsa.workspace = true
rand.workspace = true
uuid.workspace = true
md5.workspace = true
base64.workspace = true
anyhow = "1.0.89"
valence_text = { git = "https://github.com/valence-rs/valence" }
lazy_static = "1.5.0"
hmac = "0.12.1"
sha2 = "0.10.8"
